--- a/backend/backend/src/main/resources/META-INF/resources/index.html
+++ b/backend/backend/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>code-with-quarkus - 1.0.0-SNAPSHOT</title>
+        <title>backend - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -235,8 +235,8 @@
                         <div class="app-details">
                             <h5>Application</h5>
                             <ul>
-                                <li>GroupId: <code>org.acme</code></li>
-                                <li>ArtifactId: <code>code-with-quarkus</code></li>
+                                <li>GroupId: <code>at.htlleonding.scratch</code></li>
+                                <li>ArtifactId: <code>backend</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                                 <li>Quarkus Version: <code>3.5.1</code></li>
                             </ul>
@@ -258,9 +258,9 @@
                     <p>Generated starter code:</p>
                     <ul class="provided-code">
                                 <li class="provided-code">
-            <b>RESTEasy JAX-RS</b>&nbsp;Easily start your RESTful Web Services
+            <b>RESTEasy Reactive</b>&nbsp;Easily start your Reactive RESTful Web Services
             <br />&rsaquo; <code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code>
-            <br />&rsaquo; <a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide</a>
+            <br />&rsaquo; <a href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources" class="guide-link" target="_blank">Related guide</a>
         </li>
 
                     </ul>
@@ -268,7 +268,8 @@
                 <div class="right-column">
                     <h3>Selected extensions</h3>
                     <ul>
-                        <li title="Jackson serialization support for RESTEasy Classic">RESTEasy Classic Jackson</li>
+                        <li title="A Jakarta REST implementation utilizing build time processing and Vert.x. This extension is not compatible with the quarkus-resteasy extension, or any of the extensions that depend on it.">RESTEasy Reactive (<a href="https://quarkus.io/guides/resteasy-reactive" target="_blank">guide</a>)</li>
+                        <li title="Connect to the Derby database via JDBC">JDBC Driver - Derby (<a href="https://quarkus.io/guides/datasource" target="_blank">guide</a>)</li>
                     </ul>
                     <h5><a href="https://quarkus.io/guides/">Documentation</a></h5>
                     <p>Practical step-by-step guides to help you achieve a specific goal. Use them to help get your work
